--- a/Image Map/packages.config
+++ b/Image Map/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="fNbt" version="0.6.3" targetFramework="net452" />
+  <package id="Fody" version="2.1.0" targetFramework="net452" developmentDependency="true" />
 </packages>
