--- a/Image Map/packages.config
+++ b/Image Map/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
   <package id="fNbt" version="0.6.3" targetFramework="net452" />
-  <package id="Fody" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Fody" version="2.1.2" targetFramework="net452" developmentDependency="true" />
 </packages>
