"Better" UI, auto-split images

--- a/Image Map/Properties/Settings.settings
+++ b/Image Map/Properties/Settings.settings
@@ -8,8 +8,11 @@
     <Setting Name="LastExportPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="InterpolationIndex" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="PrefersPixelArt" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="PrefersSplitting" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
