--- a/Image Map/Image Map.csproj
+++ b/Image Map/Image Map.csproj
@@ -71,6 +71,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplitImageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplitImageForm.Designer.cs">
+      <DependentUpon>SplitImageForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FixImageDialog.resx">
       <DependentUpon>FixImageDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +92,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SplitImageForm.resx">
+      <DependentUpon>SplitImageForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
