--- a/Image Map/Properties/Settings.settings
+++ b/Image Map/Properties/Settings.settings
@@ -8,10 +8,13 @@
     <Setting Name="LastExportPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="PrefersPixelArt" Type="System.Boolean" Scope="User">
+    <Setting Name="InterpIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ApplyAllCheck" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="PrefersSplitting" Type="System.Boolean" Scope="User">
+    <Setting Name="BedrockMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
