--- a/Image Map/packages.config
+++ b/Image Map/packages.config
@@ -3,4 +3,7 @@
   <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
   <package id="fNbt" version="0.6.3" targetFramework="net452" />
   <package id="Fody" version="2.1.2" targetFramework="net452" developmentDependency="true" />
+  <package id="leveldb-sharp" version="1.0.0" targetFramework="net46" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
 </packages>
