--- a/Image Map/Image Map.csproj
+++ b/Image Map/Image Map.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomControls.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FixImageDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +82,7 @@
     <Compile Include="ImportWindow.Designer.cs">
       <DependentUpon>ImportWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplitImageForm.cs">
