--- a/Image Map/packages.config
+++ b/Image Map/packages.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
-  <package id="fNbt" version="0.6.3" targetFramework="net452" />
-  <package id="Fody" version="2.1.2" targetFramework="net452" developmentDependency="true" />
-  <package id="leveldb-sharp" version="1.0.0" targetFramework="net46" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
+  <package id="Costura.Fody" version="2.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="fNbt" version="0.6.3" targetFramework="net461" />
+  <package id="Fody" version="3.0.3" targetFramework="net461" developmentDependency="true" />
+  <package id="LevelDB.Standard" version="2.1.3" targetFramework="net461" />
 </packages>
