Some wacky changes!

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Image_Map.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Image_Map.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
     <userSettings>
         <Image_Map.Properties.Settings>
             <setting name="ApplyAllCheck" serializeAs="String">
@@ -23,10 +23,10 @@
                 <value>0</value>
             </setting>
             <setting name="LastExportPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LastOpenPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
