Redesign complete, implemented Java chests and map removal

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -23,10 +23,13 @@
                 <value>0</value>
             </setting>
             <setting name="LastExportPath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="LastOpenPath" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="AddChest" serializeAs="String">
+                <value>True</value>
             </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
