--- a/Image Map 2/Properties/Settings.settings
+++ b/Image Map 2/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="LastOpenPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AddChest" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
