Add existing maps to world, and export maps as images

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -22,7 +22,7 @@
             <setting name="InterpIndex" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="LastExportPath" serializeAs="String">
+            <setting name="LastWorldPath" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastOpenPath" serializeAs="String">
@@ -30,6 +30,9 @@
             </setting>
             <setting name="AddChest" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="LastImgExportPath" serializeAs="String">
+                <value />
             </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
