--- a/Image Map 2/Properties/Settings.settings
+++ b/Image Map 2/Properties/Settings.settings
@@ -14,7 +14,7 @@
     <Setting Name="InterpIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="LastExportPath" Type="System.String" Scope="User">
+    <Setting Name="LastWorldPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="LastOpenPath" Type="System.String" Scope="User">
@@ -22,6 +22,9 @@
     </Setting>
     <Setting Name="AddChest" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="LastImgExportPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
