Internal sanity cleanup and several features/improvements

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -28,11 +28,14 @@
             <setting name="LastOpenPath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="AddChest" serializeAs="String">
+            <setting name="GiveChest" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="LastImgExportPath" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="AddNewMaps" serializeAs="String">
+                <value>True</value>
             </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
