--- a/Image Map 2/Properties/Settings.settings
+++ b/Image Map 2/Properties/Settings.settings
@@ -20,11 +20,14 @@
     <Setting Name="LastOpenPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="AddChest" Type="System.Boolean" Scope="User">
+    <Setting Name="GiveChest" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LastImgExportPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AddNewMaps" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
