--- a/Image Map 2/Image Map 2.csproj
+++ b/Image Map 2/Image Map 2.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewController.cs" />
     <EmbeddedResource Include="BedrockWorldControl.resx">
       <DependentUpon>BedrockWorldControl.cs</DependentUpon>
     </EmbeddedResource>
