Better error handling, bedrock browsing, 1.12 fix

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -22,7 +22,7 @@
             <setting name="InterpIndex" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="LastWorldPath" serializeAs="String">
+            <setting name="JavaSavesFolder" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastOpenPath" serializeAs="String">
@@ -36,6 +36,9 @@
             </setting>
             <setting name="AddNewMaps" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="BedrockSavesFolder" serializeAs="String">
+                <value />
             </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
