Dithering, async image processing, better preview window

--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -40,6 +40,9 @@
             <setting name="BedrockSavesFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Dither" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Image_Map.Properties.Settings>
     </userSettings>
 </configuration>
