--- a/Image Map 2/Properties/Settings.settings
+++ b/Image Map 2/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="BedrockSavesFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Dither" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
