Fixed dither algorithm/scaling, add map loading/delete shortcuts

--- a/Image Map 2/Image Map 2.csproj
+++ b/Image Map 2/Image Map 2.csproj
@@ -177,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="image-map-icon.ico" />
+    <None Include="Resources\image_map_icon.png" />
     <None Include="Resources\item_frame.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
