Better memory consumption, and load images WHILE confirming

--- a/Image Map 2/Image Map 2.csproj
+++ b/Image Map 2/Image Map 2.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorCache.cs" />
     <Compile Include="IDInputDialog.cs">
       <SubType>Form</SubType>
     </Compile>
