--- a/Image Map 2/App.config
+++ b/Image Map 2/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="ImageMap.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Image_Map.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
@@ -9,6 +10,44 @@
         
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
     <userSettings>
+        <ImageMap.Properties.Settings>
+            <setting name="ApplyAllCheck" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoID" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BedrockMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="InterpIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="JavaSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastOpenPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GiveChest" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LastImgExportPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AddNewMaps" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BedrockSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Dither" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Stretch" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </ImageMap.Properties.Settings>
         <Image_Map.Properties.Settings>
             <setting name="ApplyAllCheck" serializeAs="String">
                 <value>False</value>
