--- a/Image Map 2/Properties/Settings.settings
+++ b/Image Map 2/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Image_Map.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ImageMap.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ApplyAllCheck" Type="System.Boolean" Scope="User">
@@ -33,6 +33,9 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Dither" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="Stretch" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
