Import unstable Image Map 2

--- a/Image Map 3/App.config
+++ b/Image Map 3/App.config
@@ -1,6 +1,81 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="ImageMap.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="Image_Map.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        </sectionGroup>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
+    <userSettings>
+        <ImageMap.Properties.Settings>
+            <setting name="ApplyAllCheck" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoID" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="InterpIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="JavaSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastOpenPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastImgExportPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AddNewMaps" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BedrockSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Dither" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Stretch" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </ImageMap.Properties.Settings>
+        <Image_Map.Properties.Settings>
+            <setting name="ApplyAllCheck" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoID" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BedrockMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="InterpIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="JavaSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastOpenPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GiveChest" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LastImgExportPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AddNewMaps" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BedrockSavesFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Dither" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </Image_Map.Properties.Settings>
+    </userSettings>
 </configuration>
