Async importing of images mostly working

--- a/Image Map 3/Image Map 3.csproj
+++ b/Image Map 3/Image Map 3.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="LockBitmap.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="MapCreationSettings.cs" />
     <Compile Include="ReplaceOptionDialog.cs">
       <SubType>Form</SubType>
     </Compile>
