Almost where it was before split

--- a/Image Map 3/Image Map 3.csproj
+++ b/Image Map 3/Image Map 3.csproj
@@ -101,6 +101,7 @@
     <Compile Include="LockBitmap.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapCreationSettings.cs" />
+    <Compile Include="Preview.cs" />
     <Compile Include="ReplaceOptionDialog.cs">
       <SubType>Form</SubType>
     </Compile>
