Improve import menu

--- a/Image Map 3/App.config
+++ b/Image Map 3/App.config
@@ -11,9 +11,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
     <userSettings>
         <ImageMap.Properties.Settings>
-            <setting name="ApplyAllCheck" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="AutoID" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -40,6 +37,9 @@
             </setting>
             <setting name="Stretch" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="AlgorithmIndex" serializeAs="String">
+                <value>0</value>
             </setting>
         </ImageMap.Properties.Settings>
         <Image_Map.Properties.Settings>
