Copy built C++ DLLs to output

--- a/Image Map 3/Image Map 3.csproj
+++ b/Image Map 3/Image Map 3.csproj
@@ -228,4 +228,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /y "$(SolutionDir)leveldb-mcpe\$(Configuration)\leveldb.dll" "$(ProjectDir)$(OutDir)"
+xcopy /y "$(SolutionDir)zlib\zlib\libz\$(Configuration)\libz.dll" "$(ProjectDir)$(OutDir)"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
