Add all the historical Java map colors, including 1.16 (doesn't compile yet, one more minor setback and I'm too tired)

--- a/Image Map 3/Image Map 3.csproj
+++ b/Image Map 3/Image Map 3.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="LockBitmap.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="ColorMappings.cs" />
     <Compile Include="MapCreationSettings.cs" />
     <Compile Include="Previews.cs" />
     <Compile Include="ReplaceOptionDialog.cs">
